--- a/server/package.json
+++ b/server/package.json
@@ -25,9 +25,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.6",
+    "@nestjs/typeorm": "^11.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.28"
+    "typeorm": "^0.3.28",
+    "typeorm-extension": "^3.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
