--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "date-fns": "^4.1.0",
+    "nestjs-pino": "^4.5.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
+    "pino-roll": "^4.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
