Updated AuthService tests

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -44,5 +44,6 @@ COOKIE_SAME_SITE=strict         # strict, lax, or none
 COOKIE_REFRESH_MAX_AGE=604800000 # 7 days in milliseconds
 COOKIE_HTTPS_ONLY=false            # Set to true in production to allow cookies only over HTTPS
 
-
 REFRESH_TOKEN_COOKIE_NAME=refreshToken
+
+APP_URL=http://localhost:3000
