--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "seed": "npx ts-node -P tsconfig.json ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d data-source.ts"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
@@ -42,7 +43,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "date-fns": "^4.1.0",
+    "handlebars": "^4.7.8",
     "nestjs-pino": "^4.5.0",
+    "nodemailer": "^8.0.1",
     "pino-http": "^11.0.0",
     "pino-pretty": "^13.1.3",
     "pino-roll": "^4.0.0",
@@ -61,6 +64,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.10",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
