--- a/server/package.json
+++ b/server/package.json
@@ -57,8 +57,7 @@
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.28",
-    "typeorm-extension": "^3.8.0",
-    "uuid": "^13.0.0"
+    "typeorm-extension": "^3.8.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
