--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,8 @@
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
+    "nanoid": "^5.1.6",
+    "nanoid-dictionary": "^5.0.0",
     "nestjs-pino": "^4.5.0",
     "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
