Fixed bug in html.hbs

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -37,6 +37,7 @@ EMAIL_TEMPLATE_DIR=./src/core/security/mail/templates
 # Email 
 LOGO_URL=https://cdn.dribbble.com/userupload/41930880/file/original-633d9b239c12bbb0788b9faf25058c54.png
 COMPANY=Your Company Name
+SUPPORT_EMAIL=supportfakeemail@gmail.com
 
 # Cookie Security Settings
 COOKIE_SECURE=false             # Set to true in production
