Updated .env.sample file

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -48,3 +48,9 @@ COOKIE_HTTPS_ONLY=false            # Set to true in production to allow cookies 
 REFRESH_TOKEN_COOKIE_NAME=refreshToken
 
 APP_URL=http://localhost:3000
+
+ROOT_FIRST_NAME=your_root_first_name
+ROOT_LAST_NAME=your_root_last_name
+ROOT_DATE_OF_BIRTH=your date of birth in YYYY-MM-DD format
+ROOT_EMAIL=your_root_email
+ROOT_PASSWORD=your_root_password
