--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
     "schema:sync": "npm run typeorm -- -d data-source.ts schema:sync",
     "schema:log": "npm run typeorm -- -d data-source.ts schema:log",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "seed": "npx ts-node -P tsconfig.json ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d data-source.ts"
+    "seeds": "npx ts-node -P tsconfig.json node_modules/typeorm-extension/bin/cli.cjs seed:run -d src/database/data-source.ts"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
