--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "handlebars": "^4.7.8",
+    "moment": "^2.30.1",
     "nanoid": "^5.1.6",
     "nanoid-dictionary": "^5.0.0",
     "nestjs-pino": "^4.5.0",
