--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,8 @@
     "seeds": "npx ts-node -P tsconfig.json node_modules/typeorm-extension/bin/cli.cjs seed:run -d src/database/data-source.ts"
   },
   "dependencies": {
+    "@adminjs/nestjs": "^7.0.0",
+    "@adminjs/typeorm": "^5.0.1",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
@@ -42,6 +44,7 @@
     "@nestjs/schedule": "^6.1.1",
     "@nestjs/swagger": "^11.2.6",
     "@nestjs/typeorm": "^11.0.0",
+    "adminjs": "^7.8.17",
     "argon2": "^0.44.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -66,6 +69,7 @@
     "typeorm-extension": "^3.8.0"
   },
   "devDependencies": {
+    "@adminjs/express": "^6.1.1",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@faker-js/faker": "^10.3.0",
