Added react admin setup with nestjs

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,6 +21,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "jsx": "react-jsx", // <--- Add or change this line
+    "noEmit": false
+
   }
 }
