--- a/server/react-admin/package.json
+++ b/server/react-admin/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.8",
+    "@mui/material": "^7.3.8",
+    "@types/js-cookie": "^3.0.6",
+    "js-cookie": "^3.0.5",
     "ra-data-json-server": "^5.14.2",
     "react": "^19.0.0",
     "react-admin": "^5.14.0",
