Updated tsconfig.json file

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -25,5 +25,10 @@
     "jsx": "react-jsx", // <--- Add or change this line
     "noEmit": false
 
-  }
+  },
+    "exclude": [
+    "node_modules",
+    "dist",
+    "react-admin" // <--- Add this line
+  ]
 }
