--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: app.js CI
 
 on:
@@ -9,7 +6,7 @@ on:
     paths:
       - 'server/src/**'
       - 'server/test/**/*.spec.ts'
-      - 'server/react-admin/**' # Added this so changes in admin also trigger build
+      - 'server/react-admin/**'
   pull_request:
     branches: [ "main" ]
     paths:
@@ -33,12 +30,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        # We point to the server lock file for caching
         cache-dependency-path: './server/package-lock.json'
 
-    ---
     # 1. SETUP AND BUILD NESTJS SERVER
-    ---
     - name: Install Server Dependencies
       working-directory: ./server
       run: npm install --force
@@ -47,9 +41,7 @@ jobs:
       working-directory: ./server
       run: npm run build --if-present
 
-    ---
     # 2. SETUP AND BUILD REACT-ADMIN
-    ---
     - name: Install React-Admin Dependencies
       working-directory: ./server/react-admin
       run: npm install --force
@@ -58,9 +50,7 @@ jobs:
       working-directory: ./server/react-admin
       run: npm run build
 
-    ---
     # 3. RUN TESTS
-    ---
     - name: Run Server Tests
       working-directory: ./server
       run: npm run test
