--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,4 +1,11 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": [
+    "node_modules", 
+    "test", 
+    "dist", 
+    "**/*spec.ts",
+    "react-admin",      // Add this
+    "**/react-admin/*"  // Add this for safety
+  ]
 }
