--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -25,6 +25,10 @@
     "noEmit": false,
 
   },
+    "include": [
+    "src/**/*",
+    "test/**/*"
+  ],
     "exclude": [
     "node_modules",
     "dist",
