--- a/server/package.json
+++ b/server/package.json
@@ -53,10 +53,14 @@
     "moment": "^2.30.1",
     "nanoid": "^5.1.6",
     "nanoid-dictionary": "^5.0.0",
+    "nestjs-pino": "^4.5.0",
     "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
+    "pino-roll": "^4.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
@@ -64,6 +68,7 @@
     "typeorm-extension": "^3.8.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@faker-js/faker": "^10.3.0",
     "@nestjs/cli": "^11.0.0",
@@ -76,6 +81,7 @@
     "@types/nodemailer": "^7.0.10",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
@@ -83,7 +89,10 @@
     "jest": "^30.0.0",
     "knip": "^5.85.0",
     "prettier": "^3.4.2",
+    "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3",
