--- a/server/package.json
+++ b/server/package.json
@@ -53,6 +53,7 @@
     "moment": "^2.30.1",
     "nanoid": "^5.1.6",
     "nanoid-dictionary": "^5.0.0",
+    "nest-winston": "^1.10.2",
     "nestjs-pino": "^4.5.0",
     "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
@@ -65,7 +66,8 @@
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.28",
-    "typeorm-extension": "^3.8.0"
+    "typeorm-extension": "^3.8.0",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
