--- a/server/package.json
+++ b/server/package.json
@@ -47,6 +47,8 @@
     "@nestjs/swagger": "^11.2.6",
     "@nestjs/terminus": "^11.1.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@sentry/nestjs": "^10.40.0",
+    "@sentry/profiling-node": "^10.40.0",
     "argon2": "^0.44.0",
     "axios": "^1.13.6",
     "class-transformer": "^0.5.1",
