--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,7 +23,12 @@
     "noFallthroughCasesInSwitch": false,
     "useDefineForClassFields": false,
     "noEmit": false,
+    "inlineSources": true,
 
+    // Set `sourceRoot` to  "/" to strip the build path prefix
+    // from generated source code references.
+    // This improves issue grouping in Sentry.
+    "sourceRoot": "/"
   },
     "include": [
     "src/**/*",
